--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "^6.3"
     },
     "require": {
-        "monolog/monolog": "^1.22",
+        "php" : ">=7.1",
+        "monolog/monolog": "^1.23",
         "symfony/http-foundation": "^3.2"
     }
 }
